crates/oxc_react_compiler/tests/snapshots/error.bailout-on-suppression-of-custom-rule.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.bailout-on-suppression-of-custom-rule.js
---
import { c as _c } from "react/compiler-runtime";
// @eslintSuppressionRules:["my-app","react-rule"] @validateExhaustiveMemoizationDependencies:false
/* eslint-disable my-app/react-rule */
function lowercasecomponent() {
	"use forget";
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const x = [];
		t0 = <div>{x}</div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
