crates/oxc_react_compiler/tests/snapshots/error.bug-hir_loc_diff_2.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.bug-hir_loc_diff_2.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Invariant: [InferMutationAliasingEffects] Expected value kind to be initialized", labels: [LabeledSpan { label: Some("this is uninitialized"), span: SourceSpan { offset: 1358, length: 10 }, primary: false }], help: Some("<unknown> AdHocStore$15:TFunction"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
