crates/oxc_react_compiler/tests/snapshots/error.bug-infer-mutation-aliasing-effects.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.bug-infer-mutation-aliasing-effects.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Invariant: [InferMutationAliasingEffects] Expected value kind to be initialized", labels: [LabeledSpan { label: Some("this is uninitialized"), span: SourceSpan { offset: 292, length: 5 }, primary: false }], help: Some("<unknown> thunk$14"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
