crates/oxc_react_compiler/tests/snapshots/error.bug-invariant-codegen-methodcall.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.bug-invariant-codegen-methodcall.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Invariant: [Codegen] Internal error: MethodCall::property must be an unpromoted + unmemoized MemberExpression", labels: [LabeledSpan { label: Some("Got: 'Identifier'"), span: SourceSpan { offset: 75, length: 10 }, primary: false }], help: None, note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
