crates/oxc_react_compiler/tests/snapshots/error.bug-invariant-couldnt-find-binding-for-decl.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.bug-invariant-couldnt-find-binding-for-decl.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Invariant: (BuildHIR::lowerAssignment) Could not find binding for declaration.", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 124, length: 6 }, primary: false }], help: None, note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
