crates/oxc_react_compiler/tests/snapshots/error.bug-invariant-expected-consistent-destructuring.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.bug-invariant-expected-consistent-destructuring.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Invariant: Expected consistent kind for destructuring", labels: [LabeledSpan { label: Some("Expected consistent kind for destructuring"), span: Span { start: 155, end: 156 }, primary: false }], help: Some("Other places were `Reassign` but 'mutate? #t8$46[7:9]{reactive}' is const"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
