crates/oxc_react_compiler/tests/snapshots/error.bug-invariant-local-or-context-references.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.bug-invariant-local-or-context-references.js
---
import { c as _c } from "react/compiler-runtime";
import { useState } from "react";
const bar = () => {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = { data: null };
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
};
export const useFoot = () => {
	const [, setState] = useState(null);
	;
	try {
		const { data } = bar();
		setState({
			data,
			error: null
		});
	} catch (t0) {
		const err = t0;
		setState((_prevState) => ({
			loading: false,
			error: err
		}));
	}
};
