crates/oxc_react_compiler/tests/snapshots/error.bug-prune-non-escaping-scopes-iife-try-catch-ternary.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.bug-prune-non-escaping-scopes-iife-try-catch-ternary.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Invariant: Expected a node for all scopes", labels: [LabeledSpan { label: None, span: Span { start: 451, end: 599 }, primary: false }], help: None, note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
